--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Logs
+notes.ts
 logs
 *.log
 npm-debug.log*
@@ -6,6 +7,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+.vscode
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
