--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+notes.txt
+
 # Runtime data
 pids
 *.pid
