--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "No boilerplate state management",
   "license": "MIT",
+  "main": "dist/nobostate.js",
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
@@ -11,14 +12,20 @@
     "@types/lodash": "^4.14.165",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
-    "typescript": "^4.1.2"
-  },
-  "dependencies": {
-    "@types/react": "^17.0.0",
-    "lodash": "^4.17.20",
+    "typescript": "^4.1.2",
+    "@types/react": ">=17.0.0",
     "react": "^17.0.1"
   },
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "@types/react": ">=17.0.0"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
+  },
   "scripts": {
-    "test": "jest -t undo-group-merge"
+    "build": "tsc",
+    "alltests": "jest",
+    "specifictest": "jest -t undo-remove"
   }
 }
