--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "lib": [
-      "dom",
+    "lib": [      "dom",
       "dom.iterable",
-      "esnext", "webworker"
-    ],
+      "esnext", "webworker" ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -16,9 +14,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react",
     "downlevelIteration": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "outDir": "dist",
+    "declaration": true,
   },
+  "include": ["src"],
+  "exclude": ["node_modules", "**/__tests__/*", "src/*.test.ts"]
 }
