--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "typescript": "^4.1.2",
-    "@types/react": ">=17.0.0",
-    "react": "^17.0.1"
+    "uglify-js": "^3.12.1"
   },
   "peerDependencies": {
     "react": "^17.0.1",
@@ -24,8 +23,8 @@
     "lodash": "^4.17.20"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && uglifyjs ./dist/nobostate.js ./dist/history.js --compress --mangle -o ./dist/nobostate.min.js && ls -lha ./dist/nobostate.min.js",
     "alltests": "jest",
-    "specifictest": "jest -t undo-remove"
+    "specifictest": "jest -t foreignKey"
   }
 }
