--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "lodash": "^4.17.20"
   },
   "scripts": {
-    "build": "tsc && uglifyjs ./dist/nobostate.js ./dist/history.js --compress --mangle -o ./dist/nobostate.min.js && ls -lha ./dist/nobostate.min.js",
+    "build": "rm ./dist/* && tsc && uglifyjs ./dist/*.js --compress --mangle -o ./dist/nobostate.min.js && tar cvzf ./dist/tar.min.js ./dist/*.min.js && ls -lha ./dist/*.min.*",
     "alltests": "jest",
-    "specifictest": "jest -t foreignKey"
+    "specifictest": "jest -t subscribers-with-key ./src/StateBaseClass.test.ts",
+    "specifictest2": "jest -t object-assign "
   }
 }
