--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "build": "rm ./dist/* && tsc && uglifyjs ./dist/*.js --compress --mangle -o ./dist/nobostate.min.js && tar cvzf ./dist/tar.min.js ./dist/*.min.js && ls -lha ./dist/*.min.*",
     "alltests": "jest",
     "specifictest": "jest -t subscribers-with-key ./src/StateBaseClass.test.ts",
-    "specifictest2": "jest -t object-assign "
+    "specifictest2": "jest -t foreignkey-set-null "
   }
 }
