--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "lodash": "^4.17.20"
   },
   "scripts": {
-    "build": "rm ./dist/* && tsc && uglifyjs ./dist/*.js --compress --mangle -o ./dist/nobostate.min.js && tar cvzf ./dist/tar.min.js ./dist/*.min.js && ls -lha ./dist/*.min.*",
+    "build": "rm ./dist/* && tsc && uglifyjs ./dist/*.js --compress --mangle -o ./dist/nobostate.min.js && tar cvzf ./dist/nobostate.min.gz ./dist/*.min.js && ls -lha ./dist/*.min.*",
     "alltests": "jest",
     "specifictest": "jest -t subscribers-with-key ./src/StateBaseClass.test.ts",
-    "specifictest2": "jest -t foreignkey-set-null "
+    "specifictest2": "jest -t reference-many "
   }
 }
