--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ES2019",
     "lib": [      "dom",
       "dom.iterable",
       "esnext", "webworker" ],
@@ -10,14 +10,15 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "amd",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    // "isolatedModules": true,
     "jsx": "react",
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true,
-    "outDir": "dist",
+    // "outDir": "dist",
+    "outFile": "dist/nobostate.js",
     "declaration": true,
   },
   "include": ["src"],
