--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2019",
+    "target": "ES2015",
     "lib": [      "dom",
       "dom.iterable",
       "esnext", "webworker" ],
@@ -10,15 +10,14 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "amd",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     // "isolatedModules": true,
-    "jsx": "react",
+    // "jsx": "react",
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true,
-    // "outDir": "dist",
-    "outFile": "dist/nobostate.js",
+    "outDir": "dist",
     "declaration": true,
   },
   "include": ["src"],
