--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,15 +10,17 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
+    "module": "CommonJS",
     "moduleResolution": "node",
-    "resolveJsonModule": true,
+    //"resolveJsonModule": true,
     // "isolatedModules": true,
     // "jsx": "react",
     "downlevelIteration": true,
     "noFallthroughCasesInSwitch": true,
     "outDir": "dist",
     "declaration": true,
+    "incremental": true,
+    "sourceMap": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "**/__tests__/*", "src/*.test.ts"]
