--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "tsc",
     "buildStandalone": "rm -f ./dist/* && tsc && uglifyjs ./dist/index.js  --compress --mangle -o ./dist/nobostate.min.js  --source-map   &&  tar cf - ./dist/*.min.js | xz -9 > ./dist/nobostate.min.gz && ls -lha ./dist/*.min.*",
     "alltests": "jest",
-    "specifictest": "jest -t subscribers-with-key ./src/StateBaseClass.test.ts",
+    "specifictest": "jest -t autorun-debug-length ./src/autorun.test.ts",
     "specifictest2": "jest -t revive-reference"
   }
 }
