--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "uglify-es": "^3.3.9"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "@types/react": ">=17.0.0"
+    "@types/react": ">=17.0.0",
+    "react": "^17.0.1"
   },
   "dependencies": {
     "lodash": "^4.17.20"
@@ -26,7 +26,7 @@
     "build": "tsc",
     "buildStandalone": "rm -f ./dist/* && tsc && uglifyjs ./dist/index.js  --compress --mangle -o ./dist/nobostate.min.js  --source-map   &&  tar cf - ./dist/*.min.js | xz -9 > ./dist/nobostate.min.gz && ls -lha ./dist/*.min.*",
     "alltests": "jest",
-    "specifictest": "jest -t autorun-debug-length ./src/autorun.test.ts",
+    "specifictest": "jest -t check-not-null-references",
     "specifictest2": "jest -t revive-reference"
   }
 }
