--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "buildStandalone": "rm -f ./dist/* && tsc && uglifyjs ./dist/index.js  --compress --mangle -o ./dist/nobostate.min.js  --source-map   &&  tar cf - ./dist/*.min.js | xz -9 > ./dist/nobostate.min.gz && ls -lha ./dist/*.min.*",
     "alltests": "jest",
     "specifictest": "jest -t check-not-null-references",
-    "specifictest2": "jest -t revive-reference"
+    "specifictest2": "jest -t autorun-on-stateArray-debug"
   }
 }
